# app-manager1

./: .gitignore  CMakeLists.txt  DELIVERY_CHECKLIST.md  GITHUB_BUILD_TROUBLESHOOTING.md  GITHUB_SETUP.md  GITHUB_UPLOAD_GUIDE.md  LICENSE.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UPLOAD_TO_GITEE.md  UPLOAD_TO_GITHUB.md  build.bat  install.nsi  package.bat
.codeartsdoer/specs/cpp-desktop-app-manager/: design.md  spec.md  tasks.md
.gitee/workflows/: build.yml
.github/workflows/: build.yml
resources/styles/: main.qss
src/: main.cpp
src/core/: BasePage.cpp  BasePage.h  MainWindow.cpp  MainWindow.h
src/modules/: AppManager.cpp  AppManager.h  AuthManager.cpp  AuthManager.h  LanguageManager.cpp  LanguageManager.h  LogManager.cpp  LogManager.h  PrivilegeManager.cpp  PrivilegeManager.h  RegistryAccessor.cpp  RegistryAccessor.h  URLManager.cpp  URLManager.h
src/pages/: AppManagementPage.cpp  AppManagementPage.h  LanguagePage.cpp  LanguagePage.h  LoginDialog.cpp  LoginDialog.h  SecurityPage.cpp  SecurityPage.h  URLManagementPage.cpp  URLManagementPage.h
